src/objects/Cost_Centre__c.object
<CustomObject>
    <description>Used to store the cost centres</description>
    <fields>
        <fullName>Budget_Manager__c</fullName>
        <label>Budget Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Centre__c</fullName>
        <externalId>true</externalId>
        <label>Cost Centre</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cost_Centre_description__c</fullName>
        <description>Cost Centre description</description>
        <label>Cost Centre description</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Directorate__c</fullName>
        <description>Directorate</description>
        <label>Directorate</label>
        <picklist>
            <picklistValues>
                <fullName>CEO Office</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Approver__c</fullName>
        <label>Secondary Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Cost Centre</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cost_Centre_description__c</columns>
        <columns>Directorate__c</columns>
        <columns>Department__c</columns>
        <columns>Budget_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cost Centre Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Centres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>